<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.duquehenry.duquehenrysubmission.FormularioContacto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_nombre"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttomFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formulario_fecha_nacimiento"
        android:onClick="showDatePickerDialog" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_telefono"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_email"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/size_formulario_descripcion"
        android:text="@string/formulario_descripcion" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputLayoutDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttomSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formulario_siguiente"
        android:onClick="buttomSiguiente" />

</LinearLayout>
